Loop complete for n-classes search

--- a/css/new.css
+++ b/css/new.css
@@ -1,4 +1,4 @@
-.block, #demo ,#example, .block2    {
+.block, #demo ,#example, .block2 ,.box   {
     background-color: antiquewhite;
     border-radius: 15px;
     padding: 10px;
