--- a/css/style.css
+++ b/css/style.css
@@ -91,3 +91,127 @@ body {
 	top: 55%;
 	transition: all 1s ease-out 0.5s;
 }
+#sidebar {
+	border: 1px solid grey;
+	width: 150px;
+	position: absolute;
+	left: 0;
+	height: 100%;
+	background: linear-gradient(to top, gray, lightgray);
+	border-bottom-right-radius: 10px;
+	border-top-right-radius: 10px;
+	
+}
+#homework {
+	position: absolute;
+	top: 20%;
+	left: 9%;
+}
+#homework>li {
+	list-style-type: none;
+	margin-bottom: 10px;
+}
+#homework>li>a {
+	list-style-type: none;
+	text-decoration: none;
+	color:white;
+	
+	text-shadow: 1px 1px black;
+	font-size: 20px;
+	transition: all 0.15s ease-in 0.1s;
+}
+#homework>li>a:hover {
+	color:coral;
+	text-decoration: underline;
+	font-size: 22px;
+}
+.title {
+	position: absolute;
+	left: 0%;
+	width: 152px;
+	text-align: center;
+	border-radius: 5px;
+	height: 50px;
+	padding-top: 10px;
+	box-sizing: border-box;
+	top: 0%;
+	font-size: 20px;
+	z-index: 99;
+	color:white;
+ 	text-shadow: 1px 1px black;
+}
+#input-block{
+	opacity: 1;
+	visibility: visible;
+}
+#input-block2{
+	opacity: 0;
+	visibility: hidden;
+	 
+}
+#input-block,#input-block2,#result_block {
+    background: linear-gradient(to top, gray, lightgray);
+	width: 300px;
+	height: 200px;
+	position: absolute;
+	left: 35%;
+	top: 25%;
+	border-radius: 10px;
+	border: 1px solid gray;
+	transition: all 0.8s ease-out 0.3s;
+	
+}
+#result_block{
+   
+	opacity: 0;
+	visibility: hidden;
+}
+
+#text-block,#text-block2 {
+	position: relative;
+	margin-top: 25%;
+	margin-left: 18%;
+}
+#text-block2{
+	margin-top: 28%;
+}
+.title-block, .title-block2, .title-block3 {
+	color: white;
+	position: absolute;
+	margin-top: 10%;
+	margin-left: 25%;
+	font-size: 22px;
+	text-shadow: 1px 1px black;
+}
+.title-block2{
+	font-size:20px;
+	text-align: center;
+	margin-left: 8%;
+}
+.title-block3{
+	margin-left: 15%;
+}
+#done{
+	position: absolute;
+	top: 55%;
+	left: 45%;
+	width: 50px;
+}
+#result-b{
+	color: white;
+	position: relative;
+	top: 35%;
+	left: 15%;
+	font-size: 20px;
+	text-shadow: 1px 1px black;
+}
+#res_but{
+	position: absolute;
+	top: 65%;
+	left: 37%;
+	width: 75px;
+	height: 30px;
+	border-radius: 5px;
+	opacity: 0;
+	 
+}
